...
    }
    /* RxSwift variabhles for filtering functionality*/

    enum constants : String{
        case latest = "Latest"
        case oldest = "Oldest"
        case titleSelect = "Select Filter Category"
        case select = "Select"
        case titleCancel = "Cancel"

    }
    enum urlStrings : String{
        case getVideos = "https://www.googleapis.com/youtube/v3/playlistItems?part=snippet%2CcontentDetails&pageToken=??&maxResults=10&playlistId=PLujWGHP4XolrvPGbwHI9XsC_4-_9sJncK&key=AIzaSyCRMQfgxj1-97JcnljYGC9O6P7hkG3ceyY"
    }
    override func viewDidLoad() {
...
        /*This module helps avoid heavy tasks*/
    }
    //MARK: - tableviewConfiguration
    func tableviewConfiguration(){
        tblVideos.delegate = self
        tblVideos.dataSource = self
        tblVideos.accessibilityIdentifier = "table--VideosTableView"
        tblVideos.tableFooterView = UIView()
    }
    //MARK: - hideActivityIndicator
    func hideActivityIndicator(){
        activityIndicator.stopAnimating()
        activityIndicator.isHidden = true
...
