...
                            <constraint firstItem="FVH-19-d9S" firstAttribute="centerY" secondItem="6Lb-zU-1a8" secondAttribute="centerY" id="jcX-wc-Cw2"/>
                            <constraint firstItem="DKu-7J-7vR" firstAttribute="trailing" secondItem="6Lb-zU-1a8" secondAttribute="trailing" id="qyR-Rs-Jf6"/>
                            <constraint firstItem="DKu-7J-7vR" firstAttribute="top" secondItem="6Lb-zU-1a8" secondAttribute="top" id="s8z-bu-DcZ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Lb-zU-1a8"/>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="K52-Fw-gdD">
                        <barButtonItem key="rightBarButtonItem" title="Filter" id="kcG-BO-PzO">
                            <connections>
                                <action selector="selBtnFilter:" destination="NYP-Ss-SqE" id="vbq-0P-jBA"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
